# conveyor_belt

./: CMakeLists.txt  package.xml  readme.md
.github/workflows/: main.yml
conveyor_belt/: CMakeLists.txt  package.xml
conveyor_belt/config/: joint_names_conveyor_belt.yaml
conveyor_belt/solidworks/: belt_base.SLDPRT  belt_body.SLDPRT
conveyor_belt/urdf/: conveyor_belt.csv  conveyor_belt.urdf
include/conveyor_belt/: conveyor_belt_plugin.hpp
launch/: display.launch  gazebo.launch  robot.launch.py  robot_description_publisher.py  spawn_robot_ros2.launch.py
meshes/: base_link.STL  belt_base.STL  belt_body.STL  belt_link.STL  belt_moving.STL
meshes/box/: base_link.STL  lid_link.STL
scripts/: spawn_object.py
solidworks/: base.SLDPRT  belt.SLDPRT  belt_moving.SLDPRT  conveyor_belt.SLDASM  ~$belt_moving.SLDPRT
src/: conveyor_belt_plugin.cpp
urdf/: box.urdf.xacro  conveyor_belt.csv  conveyor_belt.urdf  conveyor_belt.urdf.xacro
